crates/plotnik-tests/tests/04-emit/types/definitions/error_nullable_repeat.txt
MaybeId = (identifier)?

Q = (program
  (expression_statement
    (array
      (MaybeId)* @xs
    )
  )
)
------------------ DIAGNOSTICS -------------------
error: `(MaybeId)*` can repeat without matching a node because `(MaybeId)` can match zero nodes
 --> query.ptk:6:7
  |
1 | MaybeId = (identifier)?
  |           ------------- this body of `MaybeId` can match zero nodes
...
6 |       (MaybeId)* @xs
  |       ^^^^^^^^^^
  |
help: make every path through `MaybeId` match at least one node, or remove `*`
